# Qt-Hello-World

./: CMakeLists.txt  README.md
res/: main.qml
source/: main.cpp
